--- a/index.html
+++ b/index.html
@@ -2,33 +2,173 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Catholic Hymn Book</title>
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <!-- Responsive viewport for mobile devices -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--  [oai_citation_attribution:0‡The freeCodeCamp Forum](https://forum.freecodecamp.org/t/meta-viewport-tag-best-practice/610025?utm_source=chatgpt.com) -->
+
+  <title>Privacy Policy – Catholic Hymn Book</title>
+  <style>
+    /* Embedded CSS via <style> element per best practice */ /*  [oai_citation_attribution:1‡MDN Web Docs](https://developer.mozilla.org/en-US/docs/Web/HTML/Element/style?utm_source=chatgpt.com) */
+    :root {
+      --primary: #2c3e50;
+      --accent: #2980b9;
+      --text: #333;
+      --bg: #fff;
+      --maxW: 700px;
+    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      line-height: 1.6;
+      color: var(--text);
+      background: var(--bg);
+    }
+    .container {
+      max-width: var(--maxW);
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    header {
+      text-align: center;
+      padding-bottom: 1rem;
+      border-bottom: 2px solid var(--accent);
+    }
+    header h1 { color: var(--primary); margin-bottom: .2rem; }
+    header p { color: var(--accent); font-size: .9rem; }
+
+    nav.toc {
+      margin: 1.5rem 0;
+      font-size: .9rem;
+    }
+    nav.toc a {
+      margin-right: .8rem;
+      color: var(--accent);
+      text-decoration: none;
+    }
+    nav.toc a:hover { text-decoration: underline; }
+
+    section { margin-bottom: 2rem; }
+    section h2 {
+      color: var(--primary);
+      margin-bottom: .5rem;
+      font-size: 1.2rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1rem 0;
+      border-top: 1px solid #ddd;
+      font-size: .8rem;
+      color: #666;
+    }
+  </style>
 </head>
+
 <body>
-  <header class="site-header">
-    <div class="container">
-      <img src="images/logo.svg" alt="Catholic Hymn Book Logo" class="logo">
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="privacy-policy.html">Privacy Policy</a>
-      </nav>
-    </div>
-  </header>
+  <div class="container">
+    <header>
+      <h1>Privacy Policy</h1>
+      <p>Version 1.0 • Effective Oct 1, 2023 • Last Updated Apr 25, 2025</p>
+    </header>
 
-  <main class="container">
-    <h1>Welcome to Catholic Hymn Book</h1>
-    <p>Our Privacy Policy is available <a href="privacy-policy.html">here</a>.</p>
-  </main>
+    <nav class="toc">
+      <strong>Jump to:</strong>
+      <a href="#info">1. Personal Information</a>
+      <a href="#verify">2. Content Verification</a>
+      <a href="#share">3. Data Sharing</a>
+      <a href="#secure">4. Security</a>
+      <a href="#access">5. Access & Deletion</a>
+      <a href="#external">6. External Transmission</a>
+      <a href="#att">7. ATT</a>
+      <a href="#retention">8. Retention</a>
+      <a href="#children">9. Children’s Privacy</a>
+      <a href="#changes">10. Changes</a>
+      <a href="#contact">11. Contact</a>
+      <a href="#deletion">12. Deletion Request</a>
+    </nav>
 
-  <footer class="site-footer">
-    <div class="container">
-      <p>&copy; 2023 Catholic Hymn Book</p>
-    </div>
-  </footer>
+    <main>
+      <section id="info">
+        <h2>1. Personal Information Collection and Usage</h2>
+        <p><strong>Profile Creation:</strong> We collect your name, email, and any info you provide upon sign-up.</p>
+        <p><strong>Song Uploads:</strong> Uploaded hymns and metadata are stored for review and display.</p>
+        <p><strong>Usage Data:</strong> We track which features and hymns you use to improve our service.</p>
+      </section>
 
-  <script src="js/main.js"></script>
+      <section id="verify">
+        <h2>2. Uploaded Content Verification</h2>
+        <p>All uploads are reviewed by administrators for appropriateness, formatting, and relevance before posting .</p>
+        <p>Rejected content is not published; you’ll be notified and may revise.</p>
+      </section>
+
+      <section id="share">
+        <h2>3. Data Sharing and Disclosure</h2>
+        <p>We never share personal data without consent, except as required by law.</p>
+      </section>
+
+      <section id="secure">
+        <h2>4. Data Storage and Security</h2>
+        <p>We use industry-standard security measures. No system is 100% secure.</p>
+      </section>
+
+      <section id="access">
+        <h2>5. Access, Correction, and Deletion</h2>
+        <p>You can view, edit, or delete your data via the app or by contacting us.</p>
+      </section>
+
+      <section id="external">
+        <h2>6. External Data Transmission</h2>
+        <p>Images are uploaded to <a href="https://fonts.gstatic.com" target="_blank">fonts.gstatic.com</a> for processing and deleted afterward.</p>
+      </section>
+
+      <section id="att">
+        <h2>7. App Tracking Transparency (ATT)</h2>
+        <p>We do not track across other apps/sites. If we ever do, you’ll be asked first under Apple’s ATT framework.</p>
+      </section>
+
+      <section id="retention">
+        <h2>8. Data Retention</h2>
+        <p>Data is kept only as long as needed to provide our service or as required by law.</p>
+      </section>
+
+      <section id="children">
+        <h2>9. Children’s Privacy</h2>
+        <p>Our app is intended for users of all ages, including children under 13. We comply with the U.S. Children’s Online Privacy Protection Act (COPPA). We do not knowingly collect personal information from any child under the age of 13 without verifiable parental consent.</p>
+        <p>If you are under 13, please ask a parent or guardian for permission before using the app. Parents or guardians who wish to review, correct, or request deletion of their child’s personal information can contact us at <a href="mailto:catholicmezmurapp@gmail.com">catholicmezmurapp@gmail.com</a>.</p>
+      </section>
+
+      <section id="changes">
+        <h2>10. Changes to This Policy</h2>
+        <p>Updates will appear here with a new “Last Updated” date.</p>
+      </section>
+
+      <section id="contact">
+        <h2>11. Contact Us</h2>
+        <p>Email: <a href="mailto:catholicmezmurapp@gmail.com">catholicmezmurapp@gmail.com</a></p>
+      </section>
+
+      <section id="deletion">
+        <h2>12. Data Deletion Request</h2>
+        <p>
+          To remove your data, please visit our
+          <a href="data-deletion-request.html">Data Deletion Request page</a>
+          or email us at <a href="mailto:catholicmezmurapp@gmail.com">catholicmezmurapp@gmail.com</a>.
+        </p>
+      </section>
+    </main>
+
+    <footer>
+      <p>© 2023 Catholic Hymn Book • Last updated Apr 25, 2025</p>
+    </footer>
+  </div>
+
+  <script>
+    // Smooth scroll to anchors
+    document.querySelectorAll('nav.toc a').forEach(link => {
+      link.addEventListener('click', e => {
+        e.preventDefault();
+        document.querySelector(link.getAttribute('href'))
+                .scrollIntoView({ behavior: 'smooth' });
+      });
+    });
+  </script>
 </body>
 </html>
